--- a/QuanLyDiem/QuanLyDiem/QuanLyDiem.csproj
+++ b/QuanLyDiem/QuanLyDiem/QuanLyDiem.csproj
@@ -180,8 +180,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\KetQua.cs" />
+    <Compile Include="Models\Khoa.cs" />
+    <Compile Include="Models\KhoaMon.cs" />
+    <Compile Include="Models\Lop.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MonHoc.cs" />
+    <Compile Include="Models\SinhVien.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
