--- a/QuanLyDiem/QuanLyDiem/Web.config
+++ b/QuanLyDiem/QuanLyDiem/Web.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-QuanLyDiem-20190327112028.mdf;Initial Catalog=aspnet-QuanLyDiem-20190327112028;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-QuanLyDiem-20190327112028.mdf;Initial Catalog=aspnet-QuanLyDiem-20190327112028;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=HOANLK\SQLEXPRESS;Initial Catalog=QuanLyDiem;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
