Commit chức năng tìm kiếm và hiển thị danh sách điểm của SV

--- a/QuanLyDiem/QuanLyDiem/QuanLyDiem.csproj
+++ b/QuanLyDiem/QuanLyDiem/QuanLyDiem.csproj
@@ -266,8 +266,8 @@
     <Content Include="Views\Khoa\Create.cshtml" />
     <Content Include="Views\Khoa\Edit.cshtml" />
     <Content Include="Views\Khoa\Delete.cshtml" />
-    <Content Include="Views\KetQua\XemDiemTheoMaSv.cshtml" />
     <Content Include="Views\KetQua\XemDiem.cshtml" />
+    <Content Include="Views\KetQua\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
